@@ -1,5 +1,4 @@
 Setup
-config.ao
 MANIFEST
 build
 dist
