@@ -1,0 +1,3 @@
+#!/bin/sh
+
+python config_unix.py
