@@ -1,0 +1,3 @@
+[bdist_rpm]
+requires=ao
+build_script=prebuild.sh
