@@ -3,95 +3,38 @@
 """Setup script for the Ao module distribution.
 Configuration in particular could use some work."""
 
-import os, sys
+import os, sys, re, string
 from distutils.core import setup
 from distutils.extension import Extension
 from distutils.command.config import config
 from distutils.command.build import build
 
-def load_config():
-    '''This is still a bit creaky. Hopefully distutils will
-    offer better configuration support in the future.'''
-
-    if not os.path.isfile('config.ao'):
-        print "File config.ao not found"
-        return {}
-    f = open('config.ao', 'r')
-    dict = eval(f.read())
-    return dict
-
-
-class config_ao (config):
-
-    added_variables = ('ao_include_dirs', 'ao_library_dirs', 'ao_libraries')
-
-    user_options = config.user_options + [
-        ('ao-prefix=', None,
-         'prefix in which to find ao headers and libraries'),
-        ('ao-include-dirs=', None,
-         "directories to search for ao header files"),
-        ('ao-library-dirs=', None,
-         "directories to search for ao library files"),
-        ]
-
-    def _save(self):
-        '''Save the variables I want as the representation of a dictionary'''
-        
-        dict = {}
-        for v in self.added_variables:
-            dict[v] = getattr(self, v)
-        f = open('config.ao', 'w')
-        f.write(repr(dict))
-        f.write('\n')
-
-    def initialize_options (self):
-        config.initialize_options(self)
-        self.ao_prefix = '/usr/local'
-        self.ao_include_dirs = []
-        self.ao_library_dirs = []
-        self.ao_libraries = ['ao', 'dl']
-
-
-    def finalize_options (self):
-        if not self.ao_include_dirs:
-            self.ao_include_dirs = [os.path.join(self.ao_prefix, 'include')]
-        if not self.ao_library_dirs:
-            self.ao_library_dirs = [os.path.join(self.ao_prefix, 'lib')]
-                
-    def run (self):
-        self.have_ao = self.check_lib("ao", self.ao_library_dirs,
-                                 ['ao/ao.h'], self.ao_include_dirs, ['dl'])
-
-        if not self.have_ao:
-            print "*** ao check failed ***"
-            print "You may need to install the ao library"
-            print "or pass the paths where it can be found"
-            print "(setup.py --help)"
-            sys.exit(1)
-
-        self._save()
-
-
-class nullBuilder (build):
-    '''Prevents building. This is used for when they try to build
-    without having run configure first.'''
-
-    def run(self):
-        print
-        print "*** You must first run 'setup.py config' ***"
-        print
+def get_setup():
+    data = {}
+    r = re.compile(r'(\S+)\s*?=\s*?(.+)')
+    
+    if not os.path.isfile('Setup'):
+        print "No 'Setup' file. Perhaps you need to run the configure script."
         sys.exit(1)
 
-cmdclass = {'config' : config_ao}
+    f = open('Setup', 'r')
+    
+    for line in f.readlines():
+        m = r.search(line)
+        if not m:
+            print "Error in setup file:", line
+            sys.exit(1)
+        key = m.group(1)
+        val = m.group(2)
+        data[key] = val
+        
+    return data
 
-config_data = load_config()
-if not config_data:
-    cmdclass['build'] = nullBuilder
-    ao_include_dirs = ao_library_dirs = ao_libraries = []
-else:
-    ao_include_dirs = config_data['ao_include_dirs']
-    ao_library_dirs = config_data['ao_library_dirs']
-    ao_libraries = config_data['ao_libraries']
+data = get_setup()
+ao_include_dir = data['ao_include_dir']
+ao_lib_dir = data['ao_lib_dir']
+ao_libs = string.split(data['ao_libs'])
+
 
 setup (# Distribution meta-data
         name = "pyao",
@@ -100,17 +43,16 @@ setup (# Distribution meta-data
         author = "Andrew Chatham",
         author_email = "andrew.chatham@duke.edu",
         url = "http://dulug.duke.edu/~andrew/pyvorbis.html",
-
-        cmdclass = cmdclass,
+        license = 'GPL',
 
         # Description of the modules and packages in the distribution
 
         ext_modules = [Extension(
                 name = 'aomodule',
                 sources = ['src/aomodule.c'],
-                include_dirs = ao_include_dirs,
-		library_dirs = ao_library_dirs,
-                libraries = ao_libraries)]
+                include_dirs = [ao_include_dir],
+		library_dirs = [ao_lib_dir],
+                libraries = ao_libs)]
 )
 
 
